--- a/ITWEB-Fitness-app/Backend/fitness-backend/.env
+++ b/ITWEB-Fitness-app/Backend/fitness-backend/.env
@@ -1,1 +1,2 @@
 DB_CONNECT = mongodb+srv://au574151:au574151@itweb-ejg0j.mongodb.net/test?retryWrites=true&w=majority
+TOKEN_SECRET = jdsflog8updfs8ugsd8jh
