angular deployment build and node server push

--- a/ITWEB-Fitness-app/Backend/fitness-backend/package.json
+++ b/ITWEB-Fitness-app/Backend/fitness-backend/package.json
@@ -6,6 +6,10 @@
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www"
   },
+  "engines": {
+    "node": "^12.11.0",
+    "npm": "^6.11.3"
+  },
   "dependencies": {
     "@hapi/joi": "^16.1.7",
     "bcryptjs": "^2.4.3",
